changed way how user giving input and redesigned game

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #141c3a;
+  user-select: none;
+}
 .App {
   text-align: center;
 }
