repaired counting game level + add some little changes in look

--- a/src/screens/Game/Game.css
+++ b/src/screens/Game/Game.css
@@ -19,8 +19,9 @@
 }
 
 .main-title {
+    color: black; text-shadow: black 0.1em 0.1em 0.2em;
     margin-bottom: 10px;
-    text-decoration: underline;
+
 }
 
 .show-game-detail-container-button {
