--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,8 +3,8 @@
 :root {
     --primary: #4628ff;
     --warning: #ffd028;
-    --danger: #eb3f27;
-    --success: #75fa83;
+    --danger: red;
+    --success: green;
     --white: #fdfdfd;
     --dark: #181717;
 }
